--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -339,7 +339,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	 </td></tr>
 </table><br>
 
-<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/O0luGc4K8QtGrbm" target="_blank">Tutorial</a></h3>
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/O0luGc4K8QtGrbm" target="_blank">Tutorial</a>,<a href="https://owncloud.iitm.ac.in/index.php/s/aXLB5muCnnupVsW" target="_blank">Hints</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
@@ -377,7 +377,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<col width = "45%">	
    <tr> 
 	<td> Flame stability - flash back and blow off </td>
-	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a> --> </td> </tr>
+	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a></td> </tr>
 
    <tr> 
 	<td> Domestic LPG stove burner - design concepts </td>
