adding section website

--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -380,7 +380,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> <a href="https://owncloud.iitm.ac.in/index.php/s/Wz9PGgYfWCxlE7g" target="_blank">Grad school course notes, Bowman and Mitchell, 2006</a></td> </tr>
 
    <tr> 
-	<td> Domestic LPG stove burner - design concepts </td>
+	<td> Domestic LPG stove burner: stability, design concepts </td>
 	<td> VR $3.1.3, $3.1.4, VR $4.4--$4.6, HJ $3.1--$3.4 </td> </tr>
 	
 	<tr> <td> Stationary gas turbines: Lean premixed combustion </td>
@@ -395,14 +395,18 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
-	<tr> <td> Droplet combustion theory  </td>
+	<tr> <td> Classical Gas Turbine combustors  </td>
+	<td> <!-- DBS $3, $4, $5, $6, $7 --> </td></tr>
+	<tr> <td> Emerging trends to reduce emissions from aero-engines: RQL, TAPS II, TALON X  </td>
+	<td> <!-- DBS $3, $4, $5, $6, $7 --> </td></tr>
+	<tr> <td> Afterburners: issue of stability </td>
+	<td> <!-- DBS $3, $4, $5, $6, $7 --> </td></tr>
+   <tr> <td> Basics of atomization and types of injectors</td>
+	<td> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/eK1OZZGF84JNuaU">Energy budget in atomization</a>, <br><a href="https://owncloud.iitm.ac.in/index.php/s/DGF0NrOM4Kbh2AG">Atomization processes (AW $3)</a> --> </td> </tr>
+	<tr> <td> Droplet vaporization, combustion  </td>
 	<td> <!-- DBS $3, $4, $5, $6, $7 --> </td></tr>
 
-   <tr> 
-	<td> Basics of atomization and types of injectors</td>
-	<td> <!-- <a href="https://owncloud.iitm.ac.in/index.php/s/eK1OZZGF84JNuaU">Energy budget in atomization</a>, <br><a href="https://owncloud.iitm.ac.in/index.php/s/DGF0NrOM4Kbh2AG">Atomization processes (AW $3)</a> --> </td> </tr>
-
-	<tr><td> Effect of swirl on flames</td><td> </td></tr>
+	<!--<tr><td> Effect of swirl on flames</td><td> </td></tr>
 	
 	<tr> <td> Spray combustion: (i) Application in gas turbines and LP rockets  </td>
 	<td> </td></tr>
@@ -411,6 +415,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> </td></tr>
 	<tr> <td> Aircraft engine concepts: TAPS combustors, Staged combustors </td>
 	<td> </td></tr>	
+	-->
 		
 </table><br>
 
@@ -422,14 +427,20 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	<td> Single particle combustion theory for coal and biomass</td>
 	<td> </td> </tr>
 	
-	<tr> <td> Basic principles </td>
-	<td> <!-- HSM2 $1, $4 --> </td></tr>
+	<tr> <td> Biomass packed bed reactor </td>
+		<td> <!-- HSM2 $1, $4 --> </td></tr>
+	
+	<tr> <td> Burners for powdered coal </td>
+		<td>  </td></tr>
+	
+<!--	<tr> <td> Basic principles </td>
+	<td> HSM2 $1, $4 </td></tr>
 	
 	<tr> <td> Combustion and gasification of biomass </td>
-	<td> <!-- HSM2 $6 --> </td></tr>
+	<td>  HSM2 $6 </td></tr>
 
 	<tr> <td> Gasifier stoves </td>
-	<td> <!-- HSM2 $8 --> </td></tr>
+	<td> HSM2 $8 </td></tr> -->
 	
 </table><br>
 	
