--- a/teaching/ME6166_Jan_May_2020.html
+++ b/teaching/ME6166_Jan_May_2020.html
@@ -256,16 +256,18 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
+	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner </td>
+	<td> March 12th</td></tr>
 	<tr> <td> <font color="khaki">Non-Premixed flames: Tutorial 2 </td> <td> Mar 4th </td></tr>	
 	<tr> <td> <font color="greenyellow">Non-Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/W9QMwpwb9ASHufk">Computational Exercise</a> </td> <td> Due on Mar 6th </td></tr>
 	<tr> <td> <font color="greenyellow">Non-Premixed flames: Stability, smoke point, extinction; <a href="https://owncloud.iitm.ac.in/index.php/s/VBXum6Nm3kRJTEk" target="_blank">Video for Q1</a> </td> <td> Feb 19th, report due on March 4th </td></tr>
-	<tr> <td> <font color="greenyellow">Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/VYD5xrxFi5lWpwu">Computational Exercise</a> </td> <td> Due on Feb 20th </td></tr>
 </table>
 <button class="collapsible"><h4>View previous events</h4></button> 
  <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
+	<tr> <td> <font color="greenyellow">Premixed flames: <a href="https://owncloud.iitm.ac.in/index.php/s/VYD5xrxFi5lWpwu">Computational Exercise</a> </td> <td> Due on Feb 20th </td></tr>
 	<tr> <td> <font color="khaki">Premixed flames: Tutorial 1 </td> <td> Feb 5th </td></tr>
 	<tr> <td> <font color="greenyellow">Premixed flames: Flat flame burner </td> <td> Jan 22nd, report due on Feb 6th </td></tr>
 </table>
@@ -339,7 +341,7 @@ Path-to-FlameMaster/Run/FlameMan/Diff/Steady/CH4/ </li>	-->
 	 </td></tr>
 </table><br>
 
-<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/O0luGc4K8QtGrbm" target="_blank">Tutorial</a>,<a href="https://owncloud.iitm.ac.in/index.php/s/aXLB5muCnnupVsW" target="_blank">Hints</a></h3>
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example: <a href="https://owncloud.iitm.ac.in/index.php/s/qBYKDyah6WaAydh" target="_blank">Lecture notes</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/O0luGc4K8QtGrbm" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/aXLB5muCnnupVsW" target="_blank">Hints</a></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "55%">
 	<col width = "45%">	
