--- a/index.html
+++ b/index.html
@@ -1006,8 +1006,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	<td width="25%" id="people-dummy"></td>
 	<td width="25%" id="people-aditya">
 	<center>
-			 <div class="tooltip">	<img src="./images/Aditya_Lele.JPG" width="150">	
-<h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br>
+			 <div class="tooltip">	<h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br>
 					 MS 2016--18, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a></h4>
 					 <span class="tooltiptext"><p class=card><i>Thesis:</i> Development of a skeletal chemical kinetic mechanism for a biodiesel surrogate and its application in CI engine simulations</p> 
 						 <p class=card><i>Co-advisor:</i> Dr. K. Anand, IIT Madras.</p>
@@ -1018,8 +1017,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	</td>
 <td width="25%" id="people-rohit">	
 	<center>
-	 <div class="tooltip">	<img  
- src="./images/Rohit_Khare.jpg" width="170">	
+	 <div class="tooltip">	
 <h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br>
 			 MS 2016--18,  <a href="#kinetics_small_oxygenates_dme" onclick="openCity(event, 'Current_Research')">Research</a>	</h4>
 		  </h4>
@@ -1040,7 +1038,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	<td width="12.5%" id="people-dummy"></td>
 	<td width="25%" id="people-sanjay">
 	<center>
-			 <div class="tooltip">	<img src="./images/Sanjay.jpg" width="150">	
+			 <div class="tooltip">	
 <h4><a href="https://www.linkedin.com/in/vaisakh-t-v-4a3505112" target="_blank">M. C. Sanjay</a><br>
 					 M. Tech 2015--17, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a></h4>
 					 <span class="tooltiptext">
@@ -1053,8 +1051,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
   	</td>
   <td width="25%" id="people-srinu">	
   	<center>
-  	 <div class="tooltip">	<img  
-   src="./images/Srinu.jpg" width="150">	
+  	 <div class="tooltip">		
   <h4>Srinu Naik<br>
   			 M. Tech 2017--19,  <a href="#mech_opt" onclick="openCity(event, 'Current_Research')">Research</a></h4>
   		  <span class="tooltiptext">
@@ -1069,8 +1066,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	</td>
 <td width="25%" id="people-vaisakh">	
 	<center>
-	 <div class="tooltip">	<img  
- src="./images/Vaisakh.png" width="150">	
+	 <div class="tooltip">		
 <h4><a href="https://www.linkedin.com/in/vaisakh-t-v-4a3505112" target="_blank">Vaisakh Vasudevan</a><br>
 			 M. Tech 2015--17,  <a href="#mech_opt" onclick="openCity(event, 'Current_Research')">Research</a></h4>
 		  <span class="tooltiptext">
