--- a/index.html
+++ b/index.html
@@ -968,33 +968,9 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	 </center>
   </td>	  
 	
-	<td width="25%" id="people-pragnesh">
-  	<center>
-  	 <div class="tooltip">	<img src="./images/Pragnesh.jpg" width="160">	
-  			<h4>Pragnesh Rajubhai Rana<br>
-  		 MS scholar, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
-  			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E. in Mechanical Engineering from Gujarat Technological University (2016)</p> 
-				 <p class=card><i>Research interests:</i> Data-driven prediction of ignition delays</p>
-				 <p class=card><i>Co-advisor:</i> <a href="https://sivaramambikasaran.com">Dr. Sivaram Ambikasaran</a>, IIT Madras</p>
-			 	<p class=card><i>Email:</i> pragneshrana244@gmail.com </p>
-				 <!-- Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics. His thesis is co-advised by Dr. Sivaram Ambikasaran at IIT Madras. -->
-			 </span> 
-	 </div>
-  			 </center>
-    </td>
 	
-	<td width="25%" id="people-praise">
-  	<center>
-  	 <div class="tooltip">	<img src="./images/Praise_Noah_Johnston.jpg" width="150">	
-  			<h4>Praise Noah Johnson<br>
-  		 MS scholar, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
-  			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore (2017)</p> 						 <p class=card><i>Research interests:</i> Kinetics of unsaturated ester content in biodiesel fuel</p>
-			 	<p class=card><i>Email:</i> praisenoahjohnson@gmail.com  </p>
-				 <!--Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. His research work centers on kinetics of unsaturated ester content in biodiesel fuel.-->
-			  </span>
-	 </div>
-  			 </center>
-    </td>
+	
+	
 	<td width="12.5%" id="people-dummy"></td>
 </tr>
 </table>
@@ -1028,6 +1004,35 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 </span>
 	 </div>
 	 </center>
+
+	<td width="25%" id="people-praise">
+  	<center>
+  	 <div class="tooltip">	
+  			<h4>Praise Noah Johnson<br>
+  		 MS scholar, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
+  			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore (2017)</p> 						 <p class=card><i>Research interests:</i> Kinetics of unsaturated ester content in biodiesel fuel</p>
+			 	<p class=card><i>Email:</i> praisenoahjohnson@gmail.com  </p>
+				 <!--Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. His research work centers on kinetics of unsaturated ester content in biodiesel fuel.-->
+			  </span>
+	 </div>
+  			 </center>
+    </td>
+
+	<td width="25%" id="people-pragnesh">
+  	<center>
+  	 <div class="tooltip">
+  			<h4>Pragnesh Rajubhai Rana<br>
+  		 MS scholar, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
+  			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E. in Mechanical Engineering from Gujarat Technological University (2016)</p> 
+				 <p class=card><i>Research interests:</i> Data-driven prediction of ignition delays</p>
+				 <p class=card><i>Co-advisor:</i> <a href="https://sivaramambikasaran.com">Dr. Sivaram Ambikasaran</a>, IIT Madras</p>
+			 	<p class=card><i>Email:</i> pragneshrana244@gmail.com </p>
+				 <!-- Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics. His thesis is co-advised by Dr. Sivaram Ambikasaran at IIT Madras. -->
+			 </span> 
+	 </div>
+  			 </center>
+    </td>
+	
   </td>
 	<td width="25%" id="people-dummy"></td>
 </tr>
