--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
   	<center>
   	 <div class="tooltip">	
   			<h4>Praise Noah Johnson<br>
-  		 MS scholar, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
+  		 MS 2018--2020, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
   			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore (2017)</p> 						 <p class=card><i>Research interests:</i> Kinetics of unsaturated ester content in biodiesel fuel</p>
 			 	<p class=card><i>Email:</i> praisenoahjohnson@gmail.com  </p>
 				 <!--Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. His research work centers on kinetics of unsaturated ester content in biodiesel fuel.-->
@@ -1022,7 +1022,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
   	<center>
   	 <div class="tooltip">
   			<h4>Pragnesh Rajubhai Rana<br>
-  		 MS scholar, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
+  		 MS 2018--2021, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
   			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E. in Mechanical Engineering from Gujarat Technological University (2016)</p> 
 				 <p class=card><i>Research interests:</i> Data-driven prediction of ignition delays</p>
 				 <p class=card><i>Co-advisor:</i> <a href="https://sivaramambikasaran.com">Dr. Sivaram Ambikasaran</a>, IIT Madras</p>
