--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	<td width="25%" id="people-dummy"></td>
 	<td width="25%" id="people-aditya">
 	<center>
-			 <div class="tooltip">	<h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br>
+			 <div class="tooltip">	<h4>Aditya Dilip Lele</a> <br>
 					 MS 2016--18, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a></h4>
 					 <span class="tooltiptext"><p class=card><i>Thesis:</i> Development of a skeletal chemical kinetic mechanism for a biodiesel surrogate and its application in CI engine simulations</p> 
 						 <p class=card><i>Co-advisor:</i> Dr. K. Anand, IIT Madras.</p>
@@ -994,7 +994,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 <td width="25%" id="people-rohit">	
 	<center>
 	 <div class="tooltip">	
-<h4><a href="https://rohitsanjaykhare.github.io" target="_blank">Rohit Sanjay Khare</a><br>
+<h4>Rohit Sanjay Khare</a><br>
 			 MS 2016--18,  <a href="#kinetics_small_oxygenates_dme" onclick="openCity(event, 'Current_Research')">Research</a>	</h4>
 		  </h4>
 		  <span class="tooltiptext"><p class=card><i>Thesis:</i> A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study</p> 
@@ -1044,7 +1044,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	<td width="25%" id="people-sanjay">
 	<center>
 			 <div class="tooltip">	
-<h4><a href="https://www.linkedin.com/in/vaisakh-t-v-4a3505112" target="_blank">M. C. Sanjay</a><br>
+<h4>M. C. Sanjay</a><br>
 					 M. Tech 2015--17, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a></h4>
 					 <span class="tooltiptext">
 						 <p class=card><i>Project:</i> SMILES based interface to Thermodynamic Property Estimation Using THERM </p> 
@@ -1072,7 +1072,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 <td width="25%" id="people-vaisakh">	
 	<center>
 	 <div class="tooltip">		
-<h4><a href="https://www.linkedin.com/in/vaisakh-t-v-4a3505112" target="_blank">Vaisakh Vasudevan</a><br>
+<h4>Vaisakh Vasudevan</a><br>
 			 M. Tech 2015--17,  <a href="#mech_opt" onclick="openCity(event, 'Current_Research')">Research</a></h4>
 		  <span class="tooltiptext">
 			 <p class=card><i>Project:</i> Development of a framework for optimization of reaction nmechanisms and its application to n-heptane </p> 
